yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-morty-api-service
  labels:
    app: rick-morty-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: rick-morty-api
